syntax = "proto2";

package pkt;

message CopyObjectResp{
    optional group BucketId=1{
        optional uint32 timestamp=1;
        optional int32 machineIdentifier=2;
        optional uint32 processIdentifier=3;
        optional int32 counter=4;
    }
    optional string bucketName=2;
    optional string fileName=3;
    optional bytes meta=4;
    optional group VersionId=5{
        optional uint32 timestamp=1;
        optional int32 machineIdentifier=2;
        optional uint32 processIdentifier=3;
        optional int32 counter=4;
    }
    optional group FileId=6{
        optional uint32 timestamp=1;
        optional int32 machineIdentifier=2;
        optional uint32 processIdentifier=3;
        optional int32 counter=4;
    }
}



message GetBucketResp{
    optional string bucketName=1;
    optional bytes meta=2;
}


message GetObjectResp{
    optional string fileName=1;
    optional group Id=2{
        optional uint32 timestamp=1;
        optional int32 machineIdentifier=2;
        optional uint32 processIdentifier=3;
        optional int32 counter=4;
    }
    optional bytes meta=3;
    optional string bucketName=4;
}


message ListBucketResp{
    optional group Buckets=1{
        optional uint32 count=1;
        repeated string names=2;
    }
}

message ListObjectResp{
    repeated group FileMetaList=1{
        optional group FileId=1{
            optional uint32 timestamp=1;
            optional int32 machineIdentifier=2;
            optional uint32 processIdentifier=3;
            optional int32 counter=4;
        }
        optional group BucketId=2{
            optional uint32 timestamp=1;
            optional int32 machineIdentifier=2;
            optional uint32 processIdentifier=3;
            optional int32 counter=4;            
        }
        optional string fileName=3;
        optional group VersionId=4{
            optional uint32 timestamp=1;
            optional int32 machineIdentifier=2;
            optional uint32 processIdentifier=3;
            optional int32 counter=4;   
        }
        optional bool latest=5;
        optional bytes meta=6;
        optional bytes acl=7;       
    }
}

message ListObjectRespV2{
    optional bytes data=1;
    optional bool lastline=2;
}

message StringMap{
   repeated string keys=1;
   repeated group Vals=2{
       optional int32 ival=5;
       optional int64 lval=6;
       optional string val=9;
   }
}